--- a/apps/distributed/.classpath
+++ b/apps/distributed/.classpath
@@ -5,7 +5,7 @@
 	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_COMPILER_CONTAINER"/>
 	<classpathentry kind="lib" path="/home/stivo/master/Delite/lib_managed/jars/EPFL/lms_2.10.0-virtualized-SNAPSHOT/lms_2.10.0-virtualized-SNAPSHOT-0.1.jar"/>
 	<classpathentry kind="lib" path="/home/stivo/master/Delite/lib_managed/jars/org.scalatest/scalatest_2.10.0-virtualized-SNAPSHOT/scalatest_2.10.0-virtualized-SNAPSHOT-1.6.1-SNAPSHOT.jar"/>
-	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/optiml"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/distributed"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
